<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#EDECE8"
    android:gravity="center_vertical"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dip"
            android:layout_marginLeft="7dip"
            android:layout_marginRight="7dip"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/rating"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/gold"
                android:paddingTop="15dp"
                android:textColor="#F39C12"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.05"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tv_scor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dip"
                        android:layout_weight="1.05"
                        android:text="0"
                        android:textColor="#F39C12"
                        android:textSize="35sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:layout_weight="1.05"
                        android:src="@drawable/gold" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/right_answer"
                android:textColor="#77DD77"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_wa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/wrong_answer"
                android:textColor="#FF6961"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_congrats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/congrats"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/b_res_home"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="30dip"
                        android:background="@drawable/c_orange_button"
                        android:clickable="true"
                        android:text="@string/home"
                        android:textColor="#EDECE8"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/b_share"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="5dip"
                        android:layout_marginTop="30dip"
                        android:background="@drawable/c_green_button"
                        android:clickable="true"
                        android:text="@string/share"
                        android:textColor="#EDECE8"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>

            <com.startapp.android.publish.banner.Banner
                android:id="@+id/startAppBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </com.startapp.android.publish.banner.Banner>
        </LinearLayout>
    </ScrollView>

</LinearLayout>